feat: cousins audio

--- a/cousins.html
+++ b/cousins.html
@@ -129,9 +129,9 @@
                                 </figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/pia/">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/pia/">lien vers le fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -144,9 +144,10 @@
                                 </figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/pia/2-PIA-Accompagnement.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/pia/2-PIA-Accompagnement.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -157,9 +158,10 @@
                                 <figcaption>Quels ont été les effets et les impacts du programme?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/pia/3-PIA-Impacts.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/pia/3-PIA-Impacts.m4a">lien vers le fichier
+                                            audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -170,9 +172,10 @@
                                 <figcaption>Si c’était à refaire, que feriez-vous différemment?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/pia/4-PIA-a-refaire.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/pia/4-PIA-a-refaire.m4a">lien vers le fichier
+                                            audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -184,9 +187,9 @@
                                     Quels étaient ses contenus? Quel bilan en faites-vous?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/pia/5-PIA-MOOC.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/pia/5-PIA-MOOC.m4a">lien vers le fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -235,9 +238,10 @@
                                 <figcaption>Peux-tu rappeler le contexte et les objectifs de la mission?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/labo-creuse/1-NicolasTaillandier.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/labo-creuse/1-NicolasTaillandier.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -249,9 +253,10 @@
                                 </figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/labo-creuse/2-NicolasTaillandier.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/labo-creuse/2-NicolasTaillandier.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -263,9 +268,10 @@
                                     À quels moments y avez-vous associé des usagers?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/labo-creuse/3-NicolasTaillandier.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/labo-creuse/3-NicolasTaillandier.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -277,9 +283,10 @@
                                     à travers le laboratoire Passages?</figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/labo-creuse/4-NicolasTallandier.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/labo-creuse/4-NicolasTallandier.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
@@ -291,9 +298,10 @@
                                 </figcaption>
                                 <audio controls>
 
-                                    <source src="" type="audio/mpeg">
+                                    <source src="assets/audio/cousins/labo-creuse/5-NicolasTallandier.m4a">
                                     <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                        <a href="">lien vers le fichier audio</a>
+                                        <a href="assets/audio/cousins/labo-creuse/5-NicolasTallandier.m4a">lien vers le
+                                            fichier audio</a>
                                         pour le télécharger.
                                     </p>
 
