--- a/index.html
+++ b/index.html
@@ -854,9 +854,9 @@
                                 de cette pluridisciplinarité?
                             </figcaption>
                             <audio controls="controls" preload="none">
-                                <source src="assets/audio/multidisciplinary/2-pluridisciplinarité.mp3" type="">
+                                <source src="assets/audio/multidisciplinary/2-pluridisciplinarite.mp3" type="">
                                 <p>Votre navigateur ne prend pas en charge l'audio HTML. Voici un
-                                    <a href="assets/audio/multidisciplinary/2-pluridisciplinarité.mp3"> lien vers le
+                                    <a href="assets/audio/multidisciplinary/2-pluridisciplinarite.mp3"> lien vers le
                                         fichier audio</a>
                                     pour le télécharger.
                                 </p>
