feat: illustrations links-box

--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@
                         La Transfo au sein d’une collectivité : ce sont les “résidents”.
                     </p>
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p id="involve" class="goToSection">Comment impliquer les agents publics?</p>
                         <p id="multi" class="goToSection">Comment intégrer des disciplines diverses?</p>
                     </div>
@@ -257,7 +257,7 @@
                         menés par l’équipe (animateur de la démarche et agents ambassadeurs) pendant les sessions.
                     </p>
                     <div class="links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p id="rhythm" class="goToSection">Comment bien rythmer la démarche?</p>
                         <p id="concrete" class="goToSection">Comment travailler à partir de cas?</p>
                     </div>
