--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                     </div>
 
                     <div class="links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
 
                         <p>
                             <a href="assets/outils/experimental/vademecum-transfo.pdf"
@@ -388,7 +388,7 @@
                     </p>
 
                     <div class="links-box audio"
-                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
+                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Quelles sont les principaux éléments qui ont permis d’établir le cadre
@@ -775,7 +775,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
 
                         <p>
                             <a href="assets/outils/mp/1-cartographie-competences.pdf"
@@ -831,7 +831,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box  audio"
-                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
+                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Quels sont selon vous les apports principaux de vos disciplines respectives
@@ -1164,7 +1164,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/programRhythm/1-processus-global.pdf"
                                 download="processus_global_transfo" target="_blank"> Processus global de la Transfo
@@ -1509,7 +1509,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/involveAndForm/1-recrutement.pdf" download="recrutement_embassadeurs"
                                 target="_blank">Comment recruter des ambassadeurs?
@@ -1563,7 +1563,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/ear-1.png), url(images/right-ear.png);">
+                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Qu’est-ce que la présence d’agents a apporté à la démarche?</figcaption>
@@ -1605,8 +1605,8 @@
 
                     <!-- VIDEO -->
 
-                    <div class=" links-box video"
-                        style="background-image: url(images/eye-1.png), url(images/right-eye.png);">
+                    <div class="links-box video"
+                        style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
@@ -2053,7 +2053,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/concreteCase/1-cas-pratique-occitanie.pdf"
                                 download="deroule_cas_pratique" target="_blank">Exemple d’un déroulé de cas pratique
@@ -2107,7 +2107,7 @@
                     <!-- VDEO -->
 
                     <div class="links-box video"
-                        style="background-image: url(images/eye-1.png), url(images/right-eye.png);">
+                        style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
@@ -2434,7 +2434,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/ecosysteme/1-tactiques.pdf"
                                 download="construction_ecosysteme_innovation" target="_blank">Construire un écosystème
@@ -2477,7 +2477,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/ecosystemear-1.png), url(images/right-ear.png);">
+                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>L'écosystème d'innovation, de quels acteurs parle-t-on au juste?
@@ -2798,7 +2798,7 @@
                     </div>
 
                     <div class=" links-box"
-                        style="background-image: url(images/hand-1.png), url(images/right-hand.png);">
+                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
                         <p>
                             <a href="assets/outils/project/1-positionnement.pdf" download="" target="_blank">Quels
                                 positionnements pour le labo?
@@ -2862,7 +2862,7 @@
                     <!-- AUDIO -->
 
                     <div class="links-box audio"
-                        style="background-image: url(images/ecosystemear-1.png), url(images/right-ear.png);">
+                        style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
                             <figcaption>Comment s'est passée la transition entre transfo et labo?</figcaption>
