feat: legendes hypothese

--- a/index.html
+++ b/index.html
@@ -487,19 +487,19 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#design-anchor">(d) Design</a>
+                                (d) <a href="#design-anchor">Design</a>
                             </li>
                             <li>
-                                <a href="#sociologie-anchor">(s) Sociologie</a>
+                                (s) <a href="#sociologie-anchor">Sociologie</a>
                             </li>
                             <li>
-                                <a href="#politiques-anchor">(pu) Politiques Urbaines</a>
+                                (pu) <a href="#politiques-anchor">Politiques Urbaines</a>
                             </li>
                             <li>
-                                <a href="#coaching-anchor">(c) Coaching</a>
+                                (c) <a href="#coaching-anchor">Coaching</a>
                             </li>
                             <li>
-                                <a href="#education-anchor">(ep) Education Populaire</a>
+                                (ep) <a href="#education-anchor">Education Populaire</a>
                             </li>
                         </ul>
 
@@ -936,16 +936,16 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#travail-anchor">(t) Travail</a>
+                                (t) <a href="#travail-anchor">Travail</a>
                             </li>
                             <li>
-                                <a href="#co-construction-anchor">(cc) Co-construction</a>
+                                (cc) <a href="#co-construction-anchor">Co-construction</a>
                             </li>
                             <li>
-                                <a href="#pedagogie-anchor">(p) Pédagogie</a>
+                                (p) <a href="#pedagogie-anchor">Pédagogie</a>
                             </li>
                             <li>
-                                <a href="#variations-anchor">(v) Variations</a>
+                                (v) <a href="#variations-anchor">Variations</a>
                             </li>
                         </ul>
 
@@ -1247,10 +1247,10 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#fonctionnements-anchor">(ft) Fonctionnements</a>
+                                (ft) <a href="#fonctionnements-anchor">Fonctionnements</a>
                             </li>
                             <li>
-                                <a href="#focales-anchor">(f) Focales</a>
+                                (f) <a href="#focales-anchor">Focales</a>
                             </li>
                         </ul>
 
@@ -1680,22 +1680,22 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#mulhouse-anchor">(m) Les megotiers</a>
+                                (m) <a href="#mulhouse-anchor">Les megotiers</a>
                             </li>
                             <li>
-                                <a href="#dunkerque-anchor">(bf) Le bois du fort</a>
+                                (bf) <a href="#dunkerque-anchor">Le bois du fort</a>
                             </li>
                             <li>
-                                <a href="#metz-anchor">(bv) Les bureaux-volants</a>
+                                (bv) <a href="#metz-anchor">Les bureaux-volants</a>
                             </li>
                             <li>
-                                <a href="#lille-anchor">(bc) Le brico concierge</a>
+                                (bc) <a href="#lille-anchor">Le brico concierge</a>
                             </li>
                             <li>
-                                <a href="#strasbourg-anchor">(is) Les inscriptions scolaires</a>
+                                (is) <a href="#strasbourg-anchor">Les inscriptions scolaires</a>
                             </li>
                             <li>
-                                <a href="#paris-anchor">(pa) Les pieds d'arbres</a>
+                                (pa) <a href="#paris-anchor">Les pieds d'arbres</a>
                             </li>
                         </ul>
 
@@ -2183,10 +2183,10 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#ecosysteme-anchor">(ei) Ecosystème interne</a>
+                                (ei) <a href="#ecosysteme-anchor">Ecosystème interne</a>
                             </li>
                             <li>
-                                <a href="#acteurs-anchor">(at) Acteurs du territoire</a>
+                                (at) <a href="#acteurs-anchor">Acteurs du territoire</a>
                             </li>
                         </ul>
 
@@ -2571,13 +2571,13 @@
 
                         <ul class="legende">
                             <li>
-                                <a href="#iteration-anchor">(it) Itérations</a>
+                                (it) <a href="#iteration-anchor">Itérations</a>
                             </li>
                             <li>
-                                <a href="#implication-anchor">(i) Implication</a>
+                                (i) <a href="#implication-anchor">Implication</a>
                             </li>
                             <li>
-                                <a href="#exception-anchor">(e) Exception</a>
+                                (e) <a href="#exception-anchor">Exception</a>
                             </li>
                         </ul>
                     </div>
