feat: change contact.html pour faq.html

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     <a class="orange hover_orange" href="about.html">À propos</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="contact.html">Contact</a>
+                    <a class="hover_orange" href="faq.html">FAQ</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="cousins.html">Nos cousins</a>
@@ -157,112 +157,71 @@
                 </article>
             </section>
 
-            <!-- QUESTIONS -->
+            <!-- PARTENAIRES -->
 
-            <section class="container">
-                <article>
-                    <h3>Qu’est ce qu’un laboratoire d’innovation publique?</h3>
-                    <p class="intro">Un laboratoire d’innovation publique désigne une équipe interne à la
-                        collectivité, qui propose de nouvelles méthodes de conception et de mise en oeuvre des
-                        politiques publiques. Un labo a pour but de mieux prendre en compte les besoins des usagers,
-                        de décloisonner et de faciliter le travail en transversalité au sein de la collectivité. Les
-                        labos d’innovation peuvent prendre différentes “formes” et assumer des fonctions diverses :
-                        veille et prospective, ethnographie, prototypage rapide, expérimentation, animation
-                        d’ateliers créatifs, diffusion de pratiques et formation …
-                    </p>
+            <section class="partners container">
 
-                </article>
+                <!-- TITLE -->
 
-                <article>
-                    <h3>Qu’est ce que la transfo?</h3>
-                    <p class="intro">La <strong>Transfo Code Source</strong> s’inscrit le cadre du programme
-                        <a href="http://www.la27eregion.fr/transfo/" target="_blank">La transfo</a>
-                        , de <strong>La 27e Région</strong>, qui vise à accompagner les collectivités territoriales
-                        dans la création de leur propre cellule d’innovation par les usages, en s’appuyant sur un
-                        groupe d’agents (“les ambassadeurs*”) représentatifs de la diversité des métiers d’une
-                        administration publique. Ce programme expérimental a été mené de 2016 à 2020 en partenariat
-                        avec sept collectivités (les Villes de Mulhouse et Paris, la Communauté urbaine de
-                        Dunkerque, les Métropoles de Lille, Strasbourg et Metz et la Région Occitanie) et avec le
-                        soutien de la fondation Bloomberg Philanthropies. Dans chaque collectivité, une équipe
-                        pluridisciplinaire de trois à quatre personnes (“les résidents”) anime des sessions de
-                        travail de deux à trois jours consécutifs par mois avec les agents, pendant 16 à 18 mois.
-                        Ces sessions portent sur des cas pratiques, partant de vrais problématiques de la
-                        collectivité, qui vont servir de banc d’essai pour le futur laboratoire, et/ou sur la
-                        préfiguration du futur laboratoire. Tout au long du programme, des rencontres croisées
-                        appelées InterTransfo sont organisées afin que tous les participants au programme puissent
-                        échanger et construire un savoir commun. <br>
-                        L’ensemble de la démarche à fait l’objet d’une documentation ouverte, et les productions qui
-                        en ont découlées sont sous licence libre et accessibles sur
-                        <a href="http://latransfo.la27eregion.fr" target="_blank">ce blog</a>.
-                    </p>
-                </article>
+                <div class="title-box">
 
-                <article>
-                    <h3>Qui est la 27e Région? </h3>
-                    <p class="intro">De statut associatif, la 27e Région inspire et invente les services, les
-                        administrations et
-                        les modes d’action publics de demain. C’est un laboratoire de transformation publique,
-                        constitué en association indépendante, qui propose un espace pluridisciplinaire, réflexif et
-                        expérimental pour construire les futurs souhaitables de l’action publique. A travers des
-                        projets de recherche-action, des actions de diffusion, elle promeut l’expérimentation et
-                        l’essai-erreur dans l’action publique, teste avec des administrations de nouveaux services,
-                        outils, méthodes et modes d’organisation et cherche à faire valoir des alternatives aux
-                        idéologies dominantes de la transformation publique. Pour cela elle mobilise des concepts
-                        inspirés du design, des sciences sociales et des mouvements alternatifs (do-it-yourself,
-                        culture du libre, éducation populaire), et s’appuie sur une communauté de praticiens et
-                        d’agents publics à travers toute la France. Elle a été à la fois l’initiatrice, le pilote et
-                        la facilitatrice du programme La Transfo, et est à l'initiative du site “Transfo Code
-                        Source”. En savoir plus : <a href="http://www.la27eregion.fr"
-                            target="_blank">http://www.la27eregion.fr</a>.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>Qu’est ce que le design des politique publiques?</h3>
-                    <p class="intro">Le design est une démarche de conception créative, généralement de produits ou
-                        de services, centrée sur l’utilisateur. C’est une méthode, mais aussi une façon de penser et
-                        de comprendre les projets. Au-delà des designers, le design concerne tous les concepteurs,
-                        les créateurs, qui appliquent une logique d’innovation itérative, transformatrice, centrée
-                        sur l’utilisateur, avec une haute exigence de compréhension et d’esthétique des productions.
-                        Dans cet ensemble, le design des politiques publiques pointe une pratique pluridisciplinaire
-                        et collective et ensemble de méthodes qui permettent de réinterroger et de concevoir des
-                        politiques publiques en repartant du point de vue des usagers citoyens, en les associant à
-                        des tests et des simulations, en réalisant des prototypes de solutions pouvant
-                        ultérieurement être déployées avec de meilleures chances de succès.
-                    </p>
-                </article>
-
-                <article>
-                    <h3>Qui sont les “ambassadeurs” et les “résidents” de la Transfo? </h3>
-                    <p class="intro">Dans chaque démarche de montage de labo, un groupe de 20 agents volontaires a
-                        été mandaté pour suivre de bout en bout la démarche : ce sont les ambassadeurs. Ils sont
-                        présent à chaque session, participe à l’élaboration du laboratoire d’innovation, prennent
-                        part à la conduite de cas pratique. La démarche est par ailleurs animée par une équipe
-                        pluridisciplinaire de 3 professionnels expérimentés, mandatés par La 27e Région pour mener
-                        La Transfo au sein d’une collectivité : ce sont les “résidents”.
-                    </p>
-                    <div class=" links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="involve" class="goToSection">Comment impliquer les agents publics?</p>
-                        <p id="multi" class="goToSection">Comment intégrer des disciplines diverses?</p>
+                    <h2>Nos partenaires</h2>
+                    <div>
+                        <p>04 MAI 2020</p>
+                        <p>( No Model ) N°. 00P.001</p>
                     </div>
-                </article>
 
-                <article>
-                    <h3>Qu’est ce qu’un “cas pratique”? Qu’est ce qu’une “session”?</h3>
-                    <p class="intro">Le protocole de montage de labo s’appuie sur deux unités importantes : les
-                        Sessions et les cas pratiques : les sessions sont des séquences de travail de 2 à 3 jours
-                        qui ont lieu au siège de la collectivité ou sur les sites liés aux cas traités, et
-                        impliquant résidents et agents ambassadeurs. Les cas pratiques sont des projets spécifiques
-                        menés par l’équipe (animateur de la démarche et agents ambassadeurs) pendant les sessions.
-                    </p>
-                    <div class="links-box"
-                        style="background-image: url(images/left-hand.png), url(images/right-hand.png);">
-                        <p id="rhythm" class="goToSection">Comment bien rythmer la démarche?</p>
-                        <p id="concrete" class="goToSection">Comment travailler à partir de cas?</p>
+                </div>
+
+            </section>
+
+            <!-- CONTACTS -->
+
+            <section class="contact container">
+
+                <!-- TITLE -->
+
+                <div class="title-box">
+
+                    <h2>Contacts</h2>
+                    <div>
+                        <p>04 MAI 2020</p>
+                        <p>( No Model ) N°. 00C.001</p>
                     </div>
-                </article>
 
+                </div>
+
+                <div class="intro">
+                    <p>
+                        La transfo est un programme de
+                        <a href="http://www.la27eregion.fr" target="_blank">la 27e Région</a>.
+                    </p>
+                    <p>
+                        Pour en savoir plus sur la Transfo et les autres projets que nous développons, contactez nous
+                        par
+                        mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
+                        ou par telephone au <a class="contact" href="tel:+33183629827">01 83 62 98 27</a>.
+                    </p>
+                </div>
+
+                <!-- LINKS-BOX -->
+
+                <div>
+                    <div class="links-box">
+                        <ul>
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/about/transfo-twitter.png" alt="logo twitter">
+                                    <br>Twitter
+                                </a>
+                            </li>
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/about/transfo-linkedin.png" alt="logo linkedin">
+                                    <br>Linkedin
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
