--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="hover_orange" href="about.html">À propos</a>
                 </li>
                 <li>
-                    <a class="hover_orange" href="contact.html">Contact</a>
+                    <a class="hover_orange" href="faq.html">FAQ</a>
                 </li>
                 <li>
                     <a class="hover_orange" href="cousins.html">Nos cousins</a>
