feat: "about" partenaires

--- a/about.html
+++ b/about.html
@@ -173,6 +173,27 @@
 
                 </div>
 
+                <!-- INTRO -->
+
+                <p class="intro">La Transfo est un programme expérimental et inter-collectivités, mené en partenariat
+                    avec la
+                    Mairie de Paris, la ville de Mulhouse et Mulhouse-Alsace-Agglomération, la Communauté urbaine de
+                    Dunkerque et la Région Occitanie, la
+                    <a href="https://www.lillemetropole.fr/" target="_blank">Métropole Européenne de Lille</a>, la
+                    <a href="https://www.metzmetropole.fr/" target="_blank">Métropole de Metz</a> et
+                    <a href="https://www.strasbourg.eu/eurometropole-de-strasbourg" target="_blank">L’Eurométropole de
+                        Strasbourg</a>.
+                    Il est soutenu par la fondation Bloomberg Philanthropies.
+                </p>
+
+                <!-- LINKS-BOX -->
+
+                <div>
+                    <div class="links-box">
+                        <img src="images/logos/logosPartners.png" alt="logos des métropoles partenaires de la Transfo">
+                    </div>
+                </div>
+
             </section>
 
             <!-- CONTACTS -->
@@ -185,8 +206,16 @@
 
                     <h2>Contacts</h2>
                     <div>
-                        <p>04 MAI 2020</p>
-                        <p>( No Model ) N°. 00C.001</p>
+                        <ul>
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/about/transfo-twitter.png" alt="logo twitter">
+                                </a>
+                            </li>
+                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
+                                    <img src="images/about/transfo-linkedin.png" alt="logo linkedin">
+                                </a>
+                            </li>
+                        </ul>
                     </div>
 
                 </div>
@@ -202,25 +231,6 @@
                         mail à <a class="contact" href="mailto:infos@la27eregion.fr">infos@la27eregion.fr</a>
                         ou par telephone au <a class="contact" href="tel:+33183629827">01 83 62 98 27</a>.
                     </p>
-                </div>
-
-                <!-- LINKS-BOX -->
-
-                <div>
-                    <div class="links-box">
-                        <ul>
-                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
-                                    <img src="images/about/transfo-twitter.png" alt="logo twitter">
-                                    <br>Twitter
-                                </a>
-                            </li>
-                            <li> <a href="https://twitter.com/La27eregion" target="_blank">
-                                    <img src="images/about/transfo-linkedin.png" alt="logo linkedin">
-                                    <br>Linkedin
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </section>
         </div>
